
[tool.poetry]
name = "bioomicshub"
version = "0.1.0"
description = "Plataforma modular de análisis ómico en Python (miRNA-mRNA networks, clasificación de variantes, ncRNA)."
authors = ["Tu Nombre <you@example.com>"]
readme = "README.md"
packages = [{ include = "bioomicshub", from = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^2.0"
scipy = "^1.13"
scikit-learn = "^1.5"
networkx = "^3.3"
matplotlib = "^3.9"
plotly = "^5.24"
pyvis = "^0.3.2"
statsmodels = "^0.14"
pyyaml = "^6.0.2"
tqdm = "^4.66"
jupyter = "^1.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
black = "^24.8"
ruff = "^0.6"
mypy = "^1.11"
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
